--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tracking_number_data"]
 	path = tracking_number_data
-	url = git@github.com:devtanna/tracking_number_data
+	url = https://github.com/devtanna/tracking_number_data.git
